<resources>
    <string name="app_name">Infomovil</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="button_text">LOGIN</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?, </string>
    <string name="crea_una_aqui">crea una aqui</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="confirme_contrasena">Confirme contrasena</string>
    <string name="button_text_create_account">UNETE</string>
    <string name="tittle_crear_cuenta">Crear cuenta</string>
    <string name="Migue_Marco_cardview">Miguel Marco</string>
    <string name="hace_cardview">hace</string>
    <string name="dias_cardview">" 4 dias"</string>
    <string name="me_gusta_cardview">me gusta</string>
</resources>